tests/purs/failing/TransitiveDctorExportError.purs
-- @shouldFailWith TransitiveDctorExportError
module Main (T(A)) where

data T = A | B
